--- a/main/templates/main/changepassword.html
+++ b/main/templates/main/changepassword.html
@@ -7,15 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="" method="POST">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" name="submit" value="OK"/>
     </form>
-    {% if submitbutton == "OK" %}
-        <h1>Введите текущий пароль {{ current_password }}</h1>
-        <h1>Введите новый пароль {{ new_password }}</h1>
-        <h1>Подтвердите новый пароль {{ retype_new_password }}</h1>
-    {% endif %}
 </body>
 </html>
