--- a/main/templates/main/changepassword.html
+++ b/main/templates/main/changepassword.html
@@ -1,16 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="OK"/>
-    </form>
-</body>
-</html>
+{% extends 'main/layout.html' %}
+
+{% block title %} {{ title }} {% endblock %}
+{% block content %}
+    <body class="change">
+        <div class="features">
+            <h1 class="change">Форма смены пароля</h1>
+            <form class="change" action="" method="post">
+                {% csrf_token %}
+                {{ form.new_password }}<br>
+                {{ form.retype_new_password }}<br>
+                <span>{{ text_action }}</span>
+                <button class="btn btn-success" type="submit">Поменять пароль</button>
+            </form>
+        </div>
+    </body>
+{% endblock %}
