--- a/main/templates/main/add_user.html
+++ b/main/templates/main/add_user.html
@@ -8,6 +8,8 @@
             <form class="change" action="" method="post">
                 {% csrf_token %}
                 {{ form.user_name }}<br>
+                {{ form.firstname }}<br>
+                {{ form.lastname }}<br>
                 {{ form.passWord }}<br>
                 <span>{{ text_action }}</span>
                 <button class="btn btn-success" type="submit">Создать пользователя</button>
