--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -4,13 +4,13 @@
 {% block content %}
     <body class="change">
         <div class="features">
-            <h1 class="change">Создайте нового специалиста</h1>
+            <h1 class="change">Войдите в аккаунт</h1>
             <form class="change" action="" method="post">
                 {% csrf_token %}
                 {{ form.user_name }}<br>
                 {{ form.passWord }}<br>
                 <span>{{ text_action }}</span>
-                <button class="btn btn-success" type="submit">Создать пользователя</button>
+                <button class="btn btn-success" type="submit">Войти</button>
             </form>
         </div>
     </body>
